force-app/main/default/objects/Software_Attribute__c/Software_Attribute__c.object-meta.xml
<CustomObject>
    <description>This holds the attributes that are tied to a Zentitle entitlement.</description>
    <label>Software Attribute</label>
    <nameField>
        <displayFormat>ATRB-{00000000}</displayFormat>
        <label>Software Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>