force-app/main/default/objects/Software_Attribute__c/fields/Attribute_Key__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Key__c</fullName>
    <description>This is the attribute key used to identify it in Zentitle.</description>
    <inlineHelpText>This is the attribute key used to identify it in Zentitle.</inlineHelpText>
    <label>Attribute Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>