force-app/main/default/objects/Software_Attribute__c/fields/Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type__c</fullName>
    <description>This is the attribute type and is created in Zentitle.</description>
    <inlineHelpText>This is the type of the attribute. It is either string, number, date, or floating.</inlineHelpText>
    <label>Attribute Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>