force-app/main/default/objects/Software_Attribute__c/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <description>This is the value of the attribute stored in zentitle. This is stored as a text variable.</description>
    <inlineHelpText>This is the value of the attribute stored in zentitle. This is stored as a text variable.</inlineHelpText>
    <label>Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>