force-app/main/default/objects/Software_Attribute__c/fields/Software_Attribute_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Software_Attribute_External_ID__c</fullName>
    <description>This was created to be used as a unique identifier for updating the Attributes to Salesforce. This is used by the flows that sync to and from Zentitle. The format is the Zentitle ID + Software Attribute ID. The format is the Zentitle ID + - +Software Attribute ID. IE: &quot;a578C000000H9e2QAC-feat_8WdFVdTtbU6TmdshfC92Kg&quot;</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the Software Entitlement ID appended with the Software Attribute ID.</inlineHelpText>
    <label>Software Attribute External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>