force-app/main/default/objects/Software_Attribute__c/fields/Software_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Software_Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the software entitlement to which the attribute is related. Once set, this should never be changed.</description>
    <inlineHelpText>This is the software entitlement to which the attribute is related.</inlineHelpText>
    <label>Software Entitlement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This can only be related to a single entitlement.</errorMessage>
        <filterItems>
            <field>Software_Entitlement__c.Entitlement_Type__c</field>
            <operation>equals</operation>
            <value>Single</value>
        </filterItems>
        <infoMessage>This can only be related to a single entitlement.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Software_Entitlement__c</referenceTo>
    <relationshipLabel>Software Attributes</relationshipLabel>
    <relationshipName>Software_Attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>