force-app/main/default/objects/Software_Attribute__c/fields/Zentitle_Attribute_ID__c.field-meta.xml
<CustomField>
    <fullName>Zentitle_Attribute_ID__c</fullName>
    <description>This is the external ID that correlates to the ID stored in Zentitle.</description>
    <inlineHelpText>This is the external ID that correlates to the ID stored in Zentitle.</inlineHelpText>
    <label>Zentitle Attribute ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>