force-app/main/default/objects/Software_Attribute__c/validationRules/Attribute_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Attribute_Value_Validation</fullName>
    <active>true</active>
    <description>This validates the attribute values are valid values based on the type of the attribute.</description>
    <errorConditionFormula>OR(
  AND(
    NOT(ISBLANK(Attribute_Value__c)),
    (Attribute_Type__c = &apos;date&apos;),
    OR(
      LEN(Attribute_Value__c) &lt;&gt; 24,
      RIGHT(Attribute_Value__c, 1) &lt;&gt; &apos;Z&apos;
    )
  ),
  AND(
    (Attribute_Type__c = &apos;number&apos;),
    NOT(ISNUMBER(Attribute_Value__c)),
    NOT(ISBLANK(Attribute_Value__c))
  )
)</errorConditionFormula>
    <errorDisplayField>Attribute_Value__c</errorDisplayField>
    <errorMessage>If the type is a Date, it must be formatted like 2024-01-10T05:00:00.000Z; if it is a number, it must be a number value, and if it is a string, any valid string is acceptable.</errorMessage>
</ValidationRule>